fix misaligned pics

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -11,6 +17,7 @@ body{
 
 h1{
     margin-top: 10rem;
+    margin-bottom: 3rem;
     font-size: 50px;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
@@ -61,7 +68,7 @@ input {
     margin: 1rem;
     text-align: center;
     color: white;
-    
+    max-height: 394px;
 }
 
 li div {
@@ -80,7 +87,9 @@ li div {
 
 li h2{
     font-family: sans-serif;
+    font-size: 20px;
     max-width: 300px;
+    margin: 1em 0;
 }
 
 
